--- a/GlosSIIntegrationSettingsView.xaml
+++ b/GlosSIIntegrationSettingsView.xaml
@@ -12,13 +12,13 @@
         <StackPanel Margin="0,10,0,0">
             <Label Content="Desktop Mode Settings" Margin="0,0,0,5"/>
             <Separator Margin="0,0,0,5"/>
-            <CheckBox IsChecked="{Binding Settings.IntegrationEnabled}" Content="Enable GlosSI Integration by default in desktop mode" Margin="0,0,0,10"/>
+            <CheckBox IsChecked="{Binding Settings.DefaultUseIntegrationDesktop}" Content="Enable GlosSI Integration by default in desktop mode" Margin="0,0,0,10"/>
         </StackPanel>
         <StackPanel Margin="0,10,0,0">
             <Label Content="Fullscreen Mode Settings" Margin="0,0,0,5"/>
             <Separator Margin="0,0,0,5"/>
-            <CheckBox Content="Use GlosSI Integration in fullscreen mode" Margin="0,0,0,10"/>
-            <CheckBox IsChecked="{Binding Settings.UsePlayniteOverlay}" Content="Use a Playnite Steam overlay" Margin="0,0,0,10" Checked="UsePlayniteOverlay_Checked" Unchecked="UsePlayniteOverlay_Unchecked"/>
+            <CheckBox IsChecked="{Binding Settings.UseIntegrationFullscreen}" Content="Use GlosSI Integration in fullscreen mode" Margin="0,0,0,10" Checked="UpdateIsEnabled" Unchecked="UpdateIsEnabled"  Name="UseIntegrationFullscreenCheckBox"/>
+            <CheckBox IsChecked="{Binding Settings.UsePlayniteOverlay}" Content="Use a Playnite Steam overlay" Margin="0,0,0,10" Checked="UpdateIsEnabled" Unchecked="UpdateIsEnabled" Name="UsePlayniteOverlayCheckBox"/>
             <DockPanel Margin="0,0,0,10" Name="PlayniteOverlayNamePanel">
                 <TextBlock Text="Playnite overlay name:" DockPanel.Dock="Left" VerticalAlignment="Center"/>
                 <Button Margin="10,0,0,0" DockPanel.Dock="Right" Content="Browse…" Visibility="Hidden"/>
