--- a/GlosSIIntegrationSettingsView.xaml
+++ b/GlosSIIntegrationSettingsView.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d"
              d:DesignHeight="400" d:DesignWidth="600">
     <StackPanel Margin="20">
-        <CheckBox IsChecked="{Binding Settings.CloseGameWhenOverlayIsClosed}" Content="When the game overlay is closed, also close the game" Margin="0,0,0,10"/>
+        <!--<CheckBox IsChecked="{Binding Settings.CloseGameWhenOverlayIsClosed}" Content="When the game overlay is closed, also close the game" Margin="0,0,0,10"/>-->
         <Button Content="Edit default GlosSI target configuration" Click="EditDefaultGlosSITarget_Click" HorizontalAlignment="Left"/>
         <StackPanel Margin="0,10,0,0">
             <Label Content="Desktop Mode Settings" Margin="0,0,0,5"/>
