--- a/Source/Views/ShortcutCreationView.xaml
+++ b/Source/Views/ShortcutCreationView.xaml
@@ -11,7 +11,7 @@
             <DockPanel LastChildFill="False" Margin="5">
                 <Button Content="{DynamicResource LOCCancelLabel}" DockPanel.Dock="Right" IsCancel="True" Padding="10,8,10,8" MinWidth="70" Margin="5,5,5,5"/>
                 <Button Content="{DynamicResource LOCSaveLabel}" DockPanel.Dock="Right" Padding="10,8,10,8" MinWidth="70" Margin="5,5,5,5" Click="Save_Click"/>
-                <TextBlock Text="Steam must be restarted for the changes to take effect." DockPanel.Dock="Left" Margin="5,0,5,0" Foreground="{DynamicResource WarningBrush}" VerticalAlignment="Center"/>
+                <TextBlock Text="{DynamicResource LOC_GI_RestartSteamReminder}" DockPanel.Dock="Left" Margin="5,0,5,0" Foreground="{DynamicResource WarningBrush}" VerticalAlignment="Center"/>
             </DockPanel>
         </Border>
         <Border DockPanel.Dock="Top" BorderThickness="0,1,0,0" BorderBrush="{DynamicResource WindowPanelSeparatorBrush}">
@@ -24,12 +24,12 @@
                     <StackPanel Margin="20">
                         <StackPanel Margin="0,-4,0,0">
                             <DockPanel Margin="0,0,0,10">
-                                <TextBlock Text="Steam shortcut name:" DockPanel.Dock="Left" VerticalAlignment="Center" Foreground="{DynamicResource TextBrush}"/>
+                                <TextBlock Text="{DynamicResource LOC_GI_SteamShortcutNameTextBox}" DockPanel.Dock="Left" VerticalAlignment="Center" Foreground="{DynamicResource TextBrush}"/>
                                 <TextBox Margin="10,0,0,0" Text="{Binding ShortcutName, UpdateSourceTrigger=PropertyChanged}"/>
                             </DockPanel>
                             <DockPanel Margin="0,0,0,10">
-                                <TextBlock Text="Steam shortcut icon:" DockPanel.Dock="Left" VerticalAlignment="Center" Foreground="{DynamicResource TextBrush}"/>
-                                <Button Margin="10,0,0,0" DockPanel.Dock="Right" Content="&#xec5b;" FontFamily="{DynamicResource FontIcoFont}" Command="{Binding BrowseIcon}" ToolTip="Browse…"/>
+                                <TextBlock Text="{DynamicResource LOC_GI_SteamShortcutIconTextBox}" DockPanel.Dock="Left" VerticalAlignment="Center" Foreground="{DynamicResource TextBrush}"/>
+                                <Button Margin="10,0,0,0" DockPanel.Dock="Right" Content="&#xec5b;" FontFamily="{DynamicResource FontIcoFont}" Command="{Binding BrowseIcon}" ToolTip="{DynamicResource LOCBrowse}"/>
                                 <TextBox Margin="10,0,0,0" Text="{Binding ShortcutIconPath, UpdateSourceTrigger=PropertyChanged}"/>
                             </DockPanel>
                             <Border BorderThickness="1,1,1,1" BorderBrush="{DynamicResource WindowPanelSeparatorBrush}" Margin="0,0,0,10">
@@ -42,7 +42,7 @@
                     </StackPanel>
                 </ScrollViewer>
                 <DockPanel Grid.Column="0" Grid.Row="1" Margin="20, 10, 20, 20">
-                    <Button Content="Help" Click="Help_Click" HorizontalAlignment="Left" VerticalAlignment="Bottom" DockPanel.Dock="Left" Padding="15,5,15,5" MinWidth="80"/>
+                    <Button Content="{DynamicResource LOCMenuHelpTitle}" Click="Help_Click" HorizontalAlignment="Left" VerticalAlignment="Bottom" DockPanel.Dock="Left" Padding="15,5,15,5" MinWidth="80"/>
                 </DockPanel>
             </Grid>
         </Border>
