--- a/Source/Localization/loc_source.xaml
+++ b/Source/Localization/loc_source.xaml
@@ -104,5 +104,6 @@
     <sys:String x:Key="LOC_GI_CloseGlosSITargetUnexpectedError">GlosSI Integration failed to close the Steam Overlay: {0}</sys:String>
     <sys:String x:Key="LOC_GI_CreateGlosSITargetUnexpectedError">GlosSI Integration failed to add the GlosSI target configuration file and/or Steam shortcut for "{0}", the adding process was aborted: {1}</sys:String>
     <sys:String x:Key="LOC_GI_RemoveGlosSITargetUnexpectedError">GlosSI Integration failed to remove the GlosSI target configuration file and/or Steam shortcut for "{0}", the removal process was aborted: {1}</sys:String>
+    <sys:String x:Key="LOC_GI_MultipleChangedShortcutsUnexpectedError">More Steam shortcuts appears to have been modified by GlosSIConfig than intended, the changes have been reverted. Please consider reporting this erroneous behavior.</sys:String>
 
 </ResourceDictionary>
